# polybotz

./: .dockerignore  .gitignore  Dockerfile  README.md  config.example.yaml  pyproject.toml
.github/workflows/: docker-publish.yml  tests.yml
docs/: detectors.md
specs/003-docker-ghcr/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-docker-ghcr/checklists/: requirements.md
specs/005-detector-config/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-detector-config/checklists/: requirements.md
src/: __init__.py  __main__.py  alerter.py  clob_client.py  config.py  detector.py  main.py  models.py  poller.py  statistics.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_main.py
tests/unit/: __init__.py  test_alerter.py  test_clob_client.py  test_config.py  test_detector.py  test_models.py  test_poller.py  test_statistics.py
